Bifrost 7.2.1: changes since 7.2
--------------------------------

TODO:
 kernel:
  config.arch:
   CONFIG_PROCESSOR_SELECT=y
   CONFIG_SCHED_SMT=y

 - bifrost-upgrade.
  -  Maybe let bifrost-upgrade take a tarball as argument.

 * modernization path for buildsystem ?
   The miniroots are getting long in the tooth.
   The new system should be contained within the old.


Bifrost 7.2: changes since 7.1.2
--------------------------------

- schedlat. Possibility to set process priority
- allcaps. Later kernels report undefined capability bits as zero not '1'.
- nftables
- teamd
- module-init-tools. crashes with 3.16 ? module-init-tools 3.15
- import changes 7 -> 7.1.2 to 7.2
- framework:
   - add /etc/modprobe.d
   - rc.6 umount of /sbin/init fails at reboot (busy). how can we avoid this?
     -tnorootfs will fix this. The mount should actually be tmpfs, so this is strange
   - /etc/config.hooks
 - kernel 3.18. make sure latest initramfs >= 15
  - e1000e: param.c:#define DEFAULT_ITR 3 -> 0
  - igb: igb.h IGB_DEFAULT_ITR = 0
  - bonding: module parameter max_bonds=0 (so bond0 is not created)
    include/uapi/linux/if_bonding.h:#define BOND_DEFAULT_MAX_BONDS  1
  - + X25 ?
  - HPSA module
 - iptables 1.4.21
 - iproute2 3.17.0-1
 - ethtool
 - bifrost-upgrade.
  - restart services after upgrade. detect (deleted)
    remount r after upgrade should be possible.
 * extlinux for boot ?
   Solve compilation problems. Maybe easier in a new buildsystem.
 - make-bifrost-image use extlinux
 - update Install.txt with extlinux

Bifrost 7.1.2: changes since 7.1.1
----------------------------------

Bugfixes:
- openssh wrote incorrect utmp entries
- bash security update
- .ssh links for root user

Bifrost 7.1.1: changes since 7.1
--------------------------------

Security:
Kernel.
Openssl updated for openssh, curl and wget.

Kernel:
Security patches.
Patch for fibergecko.

Notable program updates:
- whois, compiled with musl. Now works.
- dnsmasq
- pciutils