@@ -58,7 +58,7 @@ cd $DST
 
 # framework: filesystem structure, scripts, configs etc
 
-untar bifrost-framework-1.0.30-1
+untar bifrost-framework-1.0.31-1
 cp $PKGDIR/CHANGELOG .
 
 # admin
@@ -195,8 +195,8 @@ untar qemu-1.4.0-1 ./usr/bin/qemu-img
 
 # core
 
-untar kernel-x86_32-3.18.0-1
-untar kernel-x86_64-3.18.0-1
+untar kernel-x86_32-3.18.0-2
+untar kernel-x86_64-3.18.0-2
 
 untar extlinux-6.02-1
 untar grub-2.00-2
